--- a/public/partials/add-habit.html
+++ b/public/partials/add-habit.html
@@ -2,9 +2,12 @@
   <h2>Add New Habit</h2>
 
   <form id="habit-form">
+    <label for="habit-name">Habit Name</label>
+
     <input
       type="text"
       id="habit-name"
+      name="habit-name"
       placeholder="Enter a habit (e.g. Drink water)"
       required
     />
